# openrelik-worker-thor-lite

./: Dockerfile  README.md  pyproject.toml
src/: tasks.py
