[tool.poetry]
name = "openrelik-worker-thor-lite"
version = "2024.10.07"
description = "Scanner for attacker tools and activity"
authors = [
  "Johan Berggren <jberggren@gmail.com>",
  "gremat <50012463+gremat@users.noreply.github.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.9.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
